---------------------------------------------------------------------------
Version 5.9.3  [V5-DEVEL] (al), 2011-??-??
- bugfix: potential misadressing in property replacer
---------------------------------------------------------------------------
Version 5.9.2  [V5-DEVEL] (rgerhards), 2011-07-11
- systemd support: set stdout/stderr to null - thx to Lennart for the patch
- added support for the ":omusrmsg:" syntax in configuring user messages
- added support for the ":omfile:" syntax in configuring user messages
---------------------------------------------------------------------------
Version 5.9.1  [V5-DEVEL] (rgerhards), 2011-06-30
- added support for obtaining timestamp for kernel message from message
  If the kernel time-stamps messages, time is now take from that
  timestamp instead of the system time when the message was read. This
  provides much better accuracy. Thanks to Lennart Poettering for
  suggesting this feature and his help during implementation.
- added support for obtaining timestamp from system for imuxsock
  This permits to read the time a message was submitted to the system
  log socket. Most importantly, this is provided in microsecond resolution.
  So we are able to obtain high precision timestampis even for messages
  that were - as is usual - not formatted with them. This also simplifies
  things in regard to local time calculation in chroot environments.
  Many thanks to Lennart Poettering for suggesting this feature,
  providing some guidance on implementing it and coordinating getting the
  necessary support into the Linux kernel.
- bugfix: timestamp was incorrectly calculated for timezones with minute
  offset
  closes: http://bugzilla.adiscon.com/show_bug.cgi?id=271
- bugfix: problems in failover action handling
  closes: http://bugzilla.adiscon.com/show_bug.cgi?id=270
  closes: http://bugzilla.adiscon.com/show_bug.cgi?id=254
- bugfix: mutex was invalidly left unlocked during action processing