@@ -345,6 +345,7 @@ enum rsRetVal_				/** return value. All methods return this if not specified oth
 	RS_RET_WRN_WRKDIR = -2182, /**< correctable problems with the rsyslog working directory */
 	RS_RET_ERR_QUEUE_EMERGENCY = -2183, /**<  some fatal error caused queue to switch to emergency mode */
 	RS_RET_OUTDATED_STMT = -2184, /**<  some outdated statement/functionality is being used in conf file */
+	RS_RET_OK_WARN = -2185, /**<  config part: everything was OK, but a warning message was emitted */
 
 	/* RainerScript error messages (range 1000.. 1999) */
 	RS_RET_SYSVAR_NOT_FOUND = 1001, /**< system variable could not be found (maybe misspelled) */
